# DevNexus

./: .dockerignore  .gitignore  docker-compose.yaml  message-notification-implementation-plan.md  project-context.md
ai-worker/: .dockerignore  .env  .gitignore  Dockerfile  README.md  pyproject.toml  pyrightconfig.json
ai-worker/docs/: project_context.md
ai-worker/src/: __init__.py  main.py
ai-worker/src/api/: dependencies.py
ai-worker/src/api/routers/: assistant.py  qa.py  recommendation.py  roadmap.py  summarization.py
ai-worker/src/app/: main.py
ai-worker/src/app/core/: ai_config.py  config.py  exceptions.py  security.py
ai-worker/src/app/infrastructure/: ai_usage.py  database.py  gemini.py  model_manager.py  moderation_media_file_helper.py  rabbitmq.py  runtime_config.py
ai-worker/src/app/models/: __init__.py  ai_usage_log.py  base.py
ai-worker/src/app/schemas/: ai_usage_log.py  code_tools.py  content.py  dynamic_filter.py  moderation.py  recommendations.py  roadmaps.py  taxonomy.py
ai-worker/src/app/services/: ai_helpers.py  ai_usage_service.py  code_tools_service.py  (+6 more)
ai-worker/src/core/: config.py  database.py  rabbitmq.py
ai-worker/src/models/: ai_usage.py  post.py  vector_store.py
ai-worker/src/schemas/: requests.py  responses.py
ai-worker/src/services/: ai_tracker_svc.py  llm_client.py  metadata_svc.py  moderation_svc.py  qa_assistant_svc.py  rag_svc.py  recommendation_svc.py  summarization_svc.py
ai-worker/src/workers/: base_consumer.py  moderation_worker.py  post_worker.py  recommendation_worker.py  summarization_worker.py
(+1627 files in other folders)
