[project]
name = "ai-worker"
version = "0.1.0"
description = ""
authors = [
    {name = "Bạch Đức Cảnh",email = "cbd1708@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard] (>=0.135.2,<0.136.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
