[project]
name = "ai-worker"
version = "0.1.0"
description = ""
authors = [
    {name = "Bạch Đức Cảnh",email = "cbd1708@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard] (>=0.135.2,<0.136.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "google-genai (>=1.69.0,<2.0.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "pyjwt (>=2.12.1,<3.0.0)",
    "torch (>=2.2.0)",
    "transformers (>=4.40.0)",
    "pillow (>=10.0.0)",
    "alembic (>=1.13.0)",
    "sentencepiece (>=0.2.1,<0.3.0)",
    "tiktoken (>=0.12.0,<0.13.0)",
    "protobuf (>=7.34.1,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
